fix_alignement_of_cell_in_portfolio_tble (#6555)

--- a/src/sass/_common/table.scss
+++ b/src/sass/_common/table.scss
@@ -60,6 +60,9 @@ table {
         &[data-balloon] {
             border-bottom: 3px solid $COLOR_LIGHT_GRAY;
         }
+        &.is_empty {
+            text-align: center;
+        }
     }
     .w-80 {
         width: 80px;
